[gd_scene load_steps=3 format=3 uid="uid://bbme3osim3rr"]

[ext_resource type="Script" path="res://addons/gSheet/scenes/typedLineEdit/arrayDisplay.gd" id="1_iw5nm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ihydr"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.173431, 0.198207, 0.2395, 1)
corner_detail = 1
anti_aliasing = false

[node name="ArrayDisplay" type="Control"]
top_level = true
layout_mode = 3
anchors_preset = 0
offset_right = 275.0
offset_bottom = 335.0
script = ExtResource("1_iw5nm")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ihydr")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="List" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/Panel"]
layout_mode = 2
size_flags_horizontal = 3
text = "+"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="focus_exited" from="MarginContainer/VBoxContainer/Panel/Button" to="." method="_on_focus_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Panel/Button" to="." method="_on_button_pressed"]
